main.css
/* =========================================== *
 * ProtonMail Material - Inbox
 * =========================================== */
/* =========================================== *
 * Original Author: Denis Zhekov
 * Website: http://snoobyx.com
 * Modified by: Jeff Hykin
 * =========================================== */

:root {
    --blue: #1E88E5;
    --off-white: #EEEE;
    --sidebar-min-width: 250px;
    --top-bar-height: 56px;
}

/* move the send button to the right side of the message composer */
#pm_composer .composer footer .pull-right {
    justify-items: right;
    flex-grow: 1;
    display: flex;
    justify-content: right;
}


/*

Scrollbars

*/
    ::-webkit-scrollbar {
        width: 17px;
        height: 17px;
        background: transparent;
    }
    ::-webkit-scrollbar-thumb {
        width: 9px;
        height: 9px;
        border: 4px solid transparent;
        background-clip: padding-box;
        background-color: rgba(0, 0, 0, 0.3);
        border-radius: 8px;
    }
    ::-webkit-scrollbar-button {
        width: 0;
        height: 0;
        display: none;
    }
    ::-webkit-scrollbar-corner {
        background-color: transparent;
    }

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    color: #212121;
}

body #pm_main {
    color: #212121;
}

.secure:not(.light) {
    background: #EEEEEE;
}

p a {
    color: var(--blue);
}


/*

text colors

*/
    html.protonmail .text-purple {
        color: var(--blue) !important;
    }

    html.protonmail .text-gray {
        color: #212121;
    }

    html.protonmail .text-light-gray {
        color: #9E9E9E;
    }

    html.protonmail .text-green {
        color: #8BC34A;
    }

    html.protonmail .text-yellow {
        color: #FFEB3B;
    }

    html.protonmail .text-red {
        color: #FF5722;
    }

    html.protonmail .text-purple {
        color: var(--blue) !important;
    }

    html.protonmail :-moz-placeholder {
        color: #9E9E9E;
    }

    html.protonmail ::-moz-placeholder {
        color: #9E9E9E;
    }

    html.protonmail ::-webkit-input-placeholder {
        color: #9E9E9E;
    }

    html.protonmail ::-ms-input-placeholder {
        color: #9E9E9E;
    }

.headerBlock-container {
    border-bottom: 1px solid var(--blue);
}

.protonLoader {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
}

.pm_form input[type=text], .pm_form input[type=number], .pm_form input[type=tel], .pm_form input[type=password], .pm_form input[type=email], .pm_form input[type=search] {
    padding: 0 16px;
    font-size: 14px;
    border: 1px solid #ffffff;
    color: #212121;
    background: #ffffff;
    box-shadow: none;
}

.pm_form input[type=text]:hover, .pm_form input[type=number]:hover, .pm_form input[type=tel]:hover, .pm_form input[type=password]:hover, .pm_form input[type=email]:hover, .pm_form input[type=search]:hover {
    border: 1px solid #ffffff;
}

.pm_form input[type=text]:focus, .pm_form input[type=number]:focus, .pm_form input[type=tel]:focus, .pm_form input[type=password]:focus, .pm_form input[type=email]:focus, .pm_form input[type=search]:focus {
    border: 1px solid var(--blue);
}

.pm_form input[type=text].ng-invalid.always-show-ng-invalid, .pm_form input[type=text].ng-invalid.ng-touched, .pm_form input[type=number].ng-invalid.always-show-ng-invalid, .pm_form input[type=number].ng-invalid.ng-touched, .pm_form input[type=tel].ng-invalid.always-show-ng-invalid, .pm_form input[type=tel].ng-invalid.ng-touched, .pm_form input[type=password].ng-invalid.always-show-ng-invalid, .pm_form input[type=password].ng-invalid.ng-touched, .pm_form input[type=email].ng-invalid.always-show-ng-invalid, .pm_form input[type=email].ng-invalid.ng-touched, .pm_form input[type=search].ng-invalid.always-show-ng-invalid, .pm_form input[type=search].ng-invalid.ng-touched {
    border-color: #FF5722;
}

.pm_form select, .pm_form .pm_select {
    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.2);
}

.pm_form select:hover, .pm_form .pm_select:hover {
    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
}

.pm_form select:active, .pm_form select:focus, .pm_form .pm_select:active, .pm_form .pm_select:focus {
    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
}

.pm_form textarea:hover, .pm_form .pm_textarea:hover {
    border: 1px solid #E0E0E0;
}

.pm_form textarea:focus, .pm_form .pm_textarea:focus {
    border: 1px solid var(--blue);
}

.pm_form select, .pm_form textarea {
    padding: 0 16px;
    border: 1px solid #E0E0E0;
    color: #212121;
    background: #ffffff;
    box-shadow: none;
}

.pm_form select.ng-invalid.always-show-ng-invalid, .pm_form select.ng-invalid.ng-touched, .pm_form textarea.ng-invalid.always-show-ng-invalid, .pm_form textarea.ng-invalid.ng-touched {
    border-color: #FF5722;
}

.pm_form label {
    height: 36px;
}

.pm_form .toolbar-button-options label:hover span {
    background: rgba(0, 0, 0, 0.03);
}

.pm_form .toolbar-button-options label:active span {
    background: rgba(0, 0, 0, 0.05);
}

.customMaskInput-mask {
    background-color: transparent;
    border: 1px solid #BDBDBD;
}

.customCheckbox-input+.customCheckbox-mask {
    background-size: 0 0;
}

.customMaskInput-container:hover [class*=customMaskInput-input]:not(:disabled)+.customMaskInput-mask, [class*=customMaskInput-input]:focus+.customMaskInput-mask {
    border-color: #757575;
}

[class*=customMaskInput-input]:disabled+.customMaskInput-mask, [class*=customMaskInput-input][disabled]+.customMaskInput-mask {
    background-color: transparent;
}
/* ... */

